bunch of changes, idek anymore
