# api_clients/go/model_professor_courses_courses_inner.go
@@ -1,0 +1,296 @@
+/*
+api
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"bytes"
+	"encoding/json"
+	"fmt"
+)
+
+// checks if the ProfessorCoursesCoursesInner type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ProfessorCoursesCoursesInner{}
+
+// ProfessorCoursesCoursesInner struct for ProfessorCoursesCoursesInner
+type ProfessorCoursesCoursesInner struct {
+	SchoolId int32              `json:"school_id"`
+	Code     string             `json:"code"`
+	Name     string             `json:"name"`
+	Id       int32              `json:"id"`
+	Year     int32              `json:"year"`
+	Semester ModelEnumsSemester `json:"semester"`
+}
+
+type _ProfessorCoursesCoursesInner ProfessorCoursesCoursesInner
+
+// NewProfessorCoursesCoursesInner instantiates a new ProfessorCoursesCoursesInner object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewProfessorCoursesCoursesInner(schoolId int32, code string, name string, id int32, year int32, semester ModelEnumsSemester) *ProfessorCoursesCoursesInner {
+	this := ProfessorCoursesCoursesInner{}
+	this.SchoolId = schoolId
+	this.Code = code
+	this.Name = name
+	this.Id = id
+	this.Year = year
+	this.Semester = semester
+	return &this
+}
+
+// NewProfessorCoursesCoursesInnerWithDefaults instantiates a new ProfessorCoursesCoursesInner object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewProfessorCoursesCoursesInnerWithDefaults() *ProfessorCoursesCoursesInner {
+	this := ProfessorCoursesCoursesInner{}
+	return &this
+}
+
+// GetSchoolId returns the SchoolId field value
+func (o *ProfessorCoursesCoursesInner) GetSchoolId() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.SchoolId
+}
+
+// GetSchoolIdOk returns a tuple with the SchoolId field value
+// and a boolean to check if the value has been set.
+func (o *ProfessorCoursesCoursesInner) GetSchoolIdOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.SchoolId, true
+}
+
+// SetSchoolId sets field value
+func (o *ProfessorCoursesCoursesInner) SetSchoolId(v int32) {
+	o.SchoolId = v
+}
+
+// GetCode returns the Code field value
+func (o *ProfessorCoursesCoursesInner) GetCode() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Code
+}
+
+// GetCodeOk returns a tuple with the Code field value
+// and a boolean to check if the value has been set.
+func (o *ProfessorCoursesCoursesInner) GetCodeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Code, true
+}
+
+// SetCode sets field value
+func (o *ProfessorCoursesCoursesInner) SetCode(v string) {
+	o.Code = v
+}
+
+// GetName returns the Name field value
+func (o *ProfessorCoursesCoursesInner) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *ProfessorCoursesCoursesInner) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *ProfessorCoursesCoursesInner) SetName(v string) {
+	o.Name = v
+}
+
+// GetId returns the Id field value
+func (o *ProfessorCoursesCoursesInner) GetId() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Id
+}
+
+// GetIdOk returns a tuple with the Id field value
+// and a boolean to check if the value has been set.
+func (o *ProfessorCoursesCoursesInner) GetIdOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Id, true
+}
+
+// SetId sets field value
+func (o *ProfessorCoursesCoursesInner) SetId(v int32) {
+	o.Id = v
+}
+
+// GetYear returns the Year field value
+func (o *ProfessorCoursesCoursesInner) GetYear() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Year
+}
+
+// GetYearOk returns a tuple with the Year field value
+// and a boolean to check if the value has been set.
+func (o *ProfessorCoursesCoursesInner) GetYearOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Year, true
+}
+
+// SetYear sets field value
+func (o *ProfessorCoursesCoursesInner) SetYear(v int32) {
+	o.Year = v
+}
+
+// GetSemester returns the Semester field value
+func (o *ProfessorCoursesCoursesInner) GetSemester() ModelEnumsSemester {
+	if o == nil {
+		var ret ModelEnumsSemester
+		return ret
+	}
+
+	return o.Semester
+}
+
+// GetSemesterOk returns a tuple with the Semester field value
+// and a boolean to check if the value has been set.
+func (o *ProfessorCoursesCoursesInner) GetSemesterOk() (*ModelEnumsSemester, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Semester, true
+}
+
+// SetSemester sets field value
+func (o *ProfessorCoursesCoursesInner) SetSemester(v ModelEnumsSemester) {
+	o.Semester = v
+}
+
+func (o ProfessorCoursesCoursesInner) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ProfessorCoursesCoursesInner) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["school_id"] = o.SchoolId
+	toSerialize["code"] = o.Code
+	toSerialize["name"] = o.Name
+	toSerialize["id"] = o.Id
+	toSerialize["year"] = o.Year
+	toSerialize["semester"] = o.Semester
+	return toSerialize, nil
+}
+
+func (o *ProfessorCoursesCoursesInner) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"school_id",
+		"code",
+		"name",
+		"id",
+		"year",
+		"semester",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err
+	}
+
+	for _, requiredProperty := range requiredProperties {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varProfessorCoursesCoursesInner := _ProfessorCoursesCoursesInner{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varProfessorCoursesCoursesInner)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ProfessorCoursesCoursesInner(varProfessorCoursesCoursesInner)
+
+	return err
+}
+
+type NullableProfessorCoursesCoursesInner struct {
+	value *ProfessorCoursesCoursesInner
+	isSet bool
+}
+
+func (v NullableProfessorCoursesCoursesInner) Get() *ProfessorCoursesCoursesInner {
+	return v.value
+}
+
+func (v *NullableProfessorCoursesCoursesInner) Set(val *ProfessorCoursesCoursesInner) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableProfessorCoursesCoursesInner) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableProfessorCoursesCoursesInner) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableProfessorCoursesCoursesInner(val *ProfessorCoursesCoursesInner) *NullableProfessorCoursesCoursesInner {
+	return &NullableProfessorCoursesCoursesInner{value: val, isSet: true}
+}
+
+func (v NullableProfessorCoursesCoursesInner) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableProfessorCoursesCoursesInner) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
