# api_clients/swagger.json
@@ -594,35 +594,6 @@
 				],
 				"type": "object"
 			},
-			"_36_Enums.Semester": {
-				"type": "string",
-				"enum": [
-					"SPRING",
-					"SUMMER",
-					"FALL"
-				]
-			},
-			"Pick_ProfessorCourse.Exclude_keyofProfessorCourse.professor_id-or-id-or-course_id__": {
-				"properties": {
-					"year": {
-						"type": "integer",
-						"format": "int32"
-					},
-					"semester": {
-						"$ref": "#/components/schemas/_36_Enums.Semester"
-					}
-				},
-				"required": [
-					"year",
-					"semester"
-				],
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_ProfessorCourse.professor_id-or-id-or-course_id_": {
-				"$ref": "#/components/schemas/Pick_ProfessorCourse.Exclude_keyofProfessorCourse.professor_id-or-id-or-course_id__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
 			"DefaultSelection_Prisma._36_CoursePayload_": {
 				"properties": {
 					"school_id": {
@@ -652,6 +623,17 @@
 				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_CoursePayload_",
 				"description": "Model Course"
 			},
+			"_36_Enums.Semester": {
+				"type": "string",
+				"enum": [
+					"SPRING",
+					"SUMMER",
+					"FALL"
+				]
+			},
+			"Semester": {
+				"$ref": "#/components/schemas/_36_Enums.Semester"
+			},
 			"ProfessorCourses": {
 				"properties": {
 					"total": {
@@ -662,10 +644,23 @@
 						"items": {
 							"allOf": [
 								{
-									"$ref": "#/components/schemas/Omit_ProfessorCourse.professor_id-or-id-or-course_id_"
+									"$ref": "#/components/schemas/Course"
 								},
 								{
-									"$ref": "#/components/schemas/Course"
+									"properties": {
+										"year": {
+											"type": "integer",
+											"format": "int32"
+										},
+										"semester": {
+											"$ref": "#/components/schemas/Semester"
+										}
+									},
+									"required": [
+										"year",
+										"semester"
+									],
+									"type": "object"
 								}
 							]
 						},
@@ -677,9 +672,6 @@
 					"courses"
 				],
 				"type": "object"
-			},
-			"Semester": {
-				"$ref": "#/components/schemas/_36_Enums.Semester"
 			},
 			"UpdatedProfessor": {
 				"properties": {
