# scraper/fmp/api.go
@@ -3,37 +3,53 @@ package fmp
 import (
 	"context"
 	"fmt"
-	"github.com/FindMyProfessors/scraper/model"
-	"github.com/Khan/genqlient/graphql"
-	"net/http"
+	"strconv"
 	"time"
+
+	"github.com/FindMyProfessors/scraper/model"
 )
 
 type Api struct {
-	Client graphql.Client
+	JwtToken string
 }
 
-func NewApi(endpoint string) *Api {
-	return &Api{Client: graphql.NewClient(endpoint, http.DefaultClient)}
+const LOCAL = 0
+const PRODUCTION = 1
+
+func NewApi(ctx context.Context, username string, password string) (context.Context, *Api, error) {
+	token, err := Login(username, password)
+	if err != nil {
+		fmt.Printf("Error logging in to FMP: %s\n", err)
+		return nil, nil, err
+	}
+
+	return ctx, &Api{JwtToken: token}, nil
+}
+
+type TermInput struct {
+	Year     int32
+	Semester string
 }
 
 func (a *Api) UpsertSchool(ctx context.Context, school *model.School, term *model.Term) error {
-	foundSchool, err := GetSchoolByName(ctx, a.Client, school.Name)
+	foundSchool, err := GetSchoolByName(a.JwtToken, school.Name)
 	if err != nil {
 		return err
 	}
 	if foundSchool == nil {
-		schoolId, err := a.CreateSchool(ctx, school)
+		school_id, err := CreateSchool(a.JwtToken, NewSchool{Name: school.Name})
 		if err != nil {
 			return err
 		}
-		school.ID = &schoolId
+		id := strconv.Itoa(school_id)
+		school.ID = &id
 	} else {
 		school.ID = foundSchool.ID
 	}
+
 	termInput := TermInput{
-		Year:     term.Year,
-		Semester: Semester(term.Semester),
+		Year:     int32(term.Year),
+		Semester: string(term.Semester),
 	}
 
 	professorMap, err := a.GetAllProfessors(ctx, school, termInput)
@@ -41,8 +57,15 @@ func (a *Api) UpsertSchool(ctx context.Context, school *model.School, term *mode
 		return err
 	}
 
-	courseIds, err := a.GetAllCourseIds(ctx, school, termInput)
+	courseIds, err := a.GetAllCourseIds(ctx, school)
+	if err != nil {
+		return err
+	}
+	// print courseIds
+	fmt.Printf("Course IDs: %v\n", courseIds)
 
+	// parse school id as int
+	schoolId, err := strconv.Atoi(*school.ID)
 	if err != nil {
 		return err
 	}
@@ -50,14 +73,16 @@ func (a *Api) UpsertSchool(ctx context.Context, school *model.School, term *mode
 	for _, course := range school.Courses {
 		_, exists := courseIds[course.Code]
 		if !exists {
-			response, err := CreateCourse(ctx, a.Client, *school.ID, NewCourse{
-				Name: course.Name,
-				Code: course.Code,
+			courseId, err := CreateCourse(a.JwtToken, NewCourse{
+				Name:     course.Name,
+				Code:     course.Code,
+				SchoolID: schoolId,
 			})
+
+			courseIds[course.Code] = strconv.Itoa(courseId)
 			if err != nil {
 				return err
 			}
-			courseIds[course.Code] = response.CreateCourse.ID
 		}
 	}
 
@@ -65,8 +90,11 @@ func (a *Api) UpsertSchool(ctx context.Context, school *model.School, term *mode
 		err = func(professor *model.Professor) error {
 			match, ok := professorMap[professor.FirstName+professor.LastName]
 			if ok {
-				// TODO: set rmpId via FMP API if elem.RMPId is set
-				// TODO: update course registrations if already set
+				// Conver professor id into int
+				professorId, err := strconv.Atoi(match.ID)
+				if err != nil {
+					return err
+				}
 				if len(match.Reviews) > 0 {
 					newReviews, err := a.InsertNewReviews(ctx, professor, match.Reviews[0])
 					if err != nil {
@@ -79,31 +107,50 @@ func (a *Api) UpsertSchool(ctx context.Context, school *model.School, term *mode
 				for _, course := range professor.Courses {
 					_, ok := match.Courses[course.Code]
 					if !ok {
-						_, err = RegisterCourse(ctx, a.Client, match.ID, courseIds[course.Code], termInput)
+						courseId, err := strconv.Atoi(course.ID)
+						if err != nil {
+							return err
+						}
+						courseEnrollment := CourseEnrollment{
+							CourseID: courseId,
+							Year:     term.Year,
+							Semester: string(term.Semester),
+						}
+
+						_, err = EnrollProfessorIntoCourse(a.JwtToken, professorId, courseEnrollment)
 						if err != nil {
 							return err
 						}
 					}
-
 				}
 			} else {
-				response, err := CreateProfessor(ctx, a.Client, *school.ID, NewProfessor{
-					FirstName: professor.FirstName,
-					LastName:  professor.LastName,
-					RmpId:     &professor.RMPId,
-				})
+
+				// Convert school id into int
+				schoolId, err := strconv.Atoi(*school.ID)
 				if err != nil {
 					return err
 				}
-				// CREATE ALL REVIEWS. NEW PROFESSOR.
+
+				professorId, err := CreateProfessor(a.JwtToken, NewProfessor{
+					FirstName: professor.FirstName,
+					LastName:  professor.LastName,
+					RmpID:     professor.RMPId,
+					SchoolID:  schoolId,
+				})
+
+				if err != nil {
+					return err
+				}
+				professor.ID = strconv.Itoa(professorId)
 
 				for _, review := range professor.Reviews {
-					_, err = CreateReview(ctx, a.Client, response.CreateProfessor.ID, NewReview{
-						Quality:    review.Quality,
-						Difficulty: review.Difficulty,
-						Time:       review.Date.Format(time.RFC3339),
-						Tags:       review.Tags,
-						Grade:      review.Grade,
+					err := CreateReview(a.JwtToken, NewReview{
+						Quality:     review.Quality,
+						Difficulty:  review.Difficulty,
+						Time:        review.Date.Format(time.RFC3339),
+						Tags:        review.Tags,
+						Grade:       review.Grade,
+						ProfessorID: professorId,
 					})
 					if err != nil {
 						return err
@@ -112,9 +159,18 @@ func (a *Api) UpsertSchool(ctx context.Context, school *model.School, term *mode
 				for _, course := range professor.Courses {
 					courseId, ok := courseIds[course.Code]
 					if !ok {
-						return fmt.Errorf("course with cod %s not found in courses retrieved from FMP", course.Code)
+						return fmt.Errorf("course with code %s not found in courses retrieved from FMP", course.Code)
 					}
-					_, err = RegisterCourse(ctx, a.Client, response.CreateProfessor.ID, courseId, termInput)
+					courseIdInt, err := strconv.Atoi(courseId)
+					if err != nil {
+						return err
+					}
+					courseEnrollment := CourseEnrollment{
+						CourseID: courseIdInt,
+						Year:     term.Year,
+						Semester: string(term.Semester),
+					}
+					_, err = EnrollProfessorIntoCourse(a.JwtToken, professorId, courseEnrollment)
 					if err != nil {
 						return err
 					}
@@ -126,9 +182,6 @@ func (a *Api) UpsertSchool(ctx context.Context, school *model.School, term *mode
 			return err
 		}
 	}
-	if err != nil {
-		return err
-	}
 	fmt.Printf("Finished uploading school to FMP\n")
 	return nil
 }
@@ -136,22 +189,27 @@ func (a *Api) UpsertSchool(ctx context.Context, school *model.School, term *mode
 func (a *Api) InsertNewReviews(ctx context.Context, scrapedProfessor *model.Professor, retrievedReview *model.Review) (int, error) {
 	var indexUntil int
 
-	// TODO: Optimize using a binary search
-
 	for i, review := range scrapedProfessor.Reviews {
 		if review.Date.Equal(retrievedReview.Date) {
 			indexUntil = i
 		}
 	}
 
+	// convert professor id into int
+	professorId, err := strconv.Atoi(scrapedProfessor.ID)
+	if err != nil {
+		return -1, err
+	}
+
 	for i := 0; i < indexUntil; i++ {
 		review := scrapedProfessor.Reviews[i]
-		_, err := CreateReview(ctx, a.Client, scrapedProfessor.ID, NewReview{
-			Quality:    review.Quality,
-			Difficulty: review.Difficulty,
-			Time:       review.Date.Format(time.RFC3339),
-			Tags:       review.Tags,
-			Grade:      review.Grade,
+		err := CreateReview(a.JwtToken, NewReview{
+			Quality:     review.Quality,
+			Difficulty:  review.Difficulty,
+			Time:        review.Date.Format(time.RFC3339),
+			Tags:        review.Tags,
+			Grade:       review.Grade,
+			ProfessorID: professorId,
 		})
 		if err != nil {
 			return -1, err
@@ -159,93 +217,136 @@ func (a *Api) InsertNewReviews(ctx context.Context, scrapedProfessor *model.Prof
 	}
 
 	return 0, nil
-
 }
 
 func (a *Api) GetAllProfessors(ctx context.Context, school *model.School, term TermInput) (map[string]*model.Professor, error) {
 	professorMap := make(map[string]*model.Professor)
 
-	var after *string
+	schoolId, err := strconv.Atoi(*school.ID)
+	if err != nil {
+		return nil, fmt.Errorf("invalid school ID: %v", err)
+	}
+
+	var after string
 	hasNextPage := true
+
 	for hasNextPage {
-		response, err := GetProfessors(ctx, a.Client, *school.ID, after, term)
+		resp, err := SearchProfessors(a.JwtToken, school.Name, schoolId, after, 10000)
 		if err != nil {
 			return nil, err
 		}
 
-		query := response.Professors
-
-		professors := query.Professors
-
-		for _, elem := range professors {
-
+		for _, elem := range resp.Edges {
 			professor := model.Professor{
-				ID:        elem.Id,
-				FirstName: elem.FirstName,
-				LastName:  elem.LastName,
+				ID:        strconv.Itoa(elem.Node.ID),
+				FirstName: elem.Node.FirstName,
+				LastName:  elem.Node.LastName,
 				Courses:   map[string]*model.Course{},
 				Reviews:   []*model.Review{},
 			}
 
-			for _, review := range elem.Reviews.Reviews {
-				professor.Reviews = append(professor.Reviews, &review)
+			reviews, err := GetReviewsForProfessor(a.JwtToken, elem.Node.ID, "", 10000)
+			if err != nil {
+				return nil, err
 			}
 
-			if elem.Teaches.PageInfo.HasNextPage {
-				return nil, fmt.Errorf("implement getting next page for professors, %s is teaching %d classes", elem.FirstName+" "+elem.LastName, elem.Teaches.TotalCount)
+			for _, review := range reviews.Edges {
+				date, err := time.Parse(time.RFC3339, review.Node.Time)
+				if err != nil {
+					return nil, err
+				}
+				professor.Reviews = append(professor.Reviews, &model.Review{
+					Quality:    review.Node.Quality,
+					Difficulty: review.Node.Difficulty,
+					Date:       date,
+					Tags:       convertTags(review.Node.Tags),
+					Grade:      model.Grade(review.Node.Grade),
+				})
 			}
-			for _, course := range elem.Teaches.Courses {
-				professor.Courses[course.Code] = &course
+
+			courses, err := GetProfessorCourses(a.JwtToken, elem.Node.ID, int(term.Year), term.Semester)
+			if err != nil {
+				return nil, err
+			}
+
+			for _, course := range courses.Courses {
+				professor.Courses[course.Code] = &model.Course{
+					ID:   strconv.Itoa(course.ID),
+					Name: course.Name,
+					Code: course.Code,
+				}
 			}
 
 			professorMap[professor.FirstName+professor.LastName] = &professor
 		}
 
-		after = &query.PageInfo.EndCursor
-		hasNextPage = query.PageInfo.HasNextPage
+		after = resp.PageInfo.EndCursor
+		hasNextPage = resp.PageInfo.HasNextPage
 	}
 	return professorMap, nil
 }
 
-func (a *Api) GetAllCourseIds(ctx context.Context, school *model.School, input TermInput) (map[string]string, error) {
+func convertTags(tags []string) []model.Tag {
+	var modelTags []model.Tag
+	for _, tag := range tags {
+		modelTags = append(modelTags, model.Tag(tag))
+	}
+	return modelTags
+}
+
+func (a *Api) GetAllCourseIds(ctx context.Context, school *model.School) (map[string]string, error) {
 	courseMap := make(map[string]string)
 
-	var after *string
+	var after string
 	hasNextPage := true
+	// get school id
+	schoolId, err := strconv.Atoi(*school.ID)
+	if err != nil {
+		return nil, fmt.Errorf("invalid school ID: %v", err)
+	}
+
+	// print school id
+	fmt.Printf("School ID: %d\n", schoolId)
 	for hasNextPage {
-		response, err := GetCourses(ctx, a.Client, *school.ID, input, after)
+		// print after
+		fmt.Printf("After: %s\n", after)
+
+		response, err := GetSchoolCourses(a.JwtToken, schoolId, "", after, 100)
 		if err != nil {
 			return nil, err
 		}
-		query := response.School.Courses
+		// print response
+		fmt.Printf("Response: %v\n", response)
 
-		for _, elem := range query.Courses {
-			courseMap[elem.Code] = elem.ID
+		// loop over and print response.Edges
+		for _, elem := range response.Edges {
+			fmt.Printf("Course: %s %s\n", elem.Node.Code, elem.Node.Name)
 		}
 
-		after = &query.PageInfo.EndCursor
-		hasNextPage = query.PageInfo.HasNextPage
+		for _, elem := range response.Edges {
+			courseMap[elem.Node.Code] = strconv.Itoa(elem.Node.ID)
+		}
+
+		after = response.PageInfo.EndCursor
+		hasNextPage = response.PageInfo.HasNextPage
 	}
 	return courseMap, nil
 }
 
-func (a *Api) CreateSchool(ctx context.Context, school *model.School) (id string, err error) {
-	response, err := CreateSchool(ctx, a.Client, NewSchool{Name: school.Name})
-	if err != nil {
-		return "", err
-	}
-	return *response.GetCreateSchool().ID, nil
-}
-
-func GetSchoolByName(ctx context.Context, client graphql.Client, schoolName string) (*model.School, error) {
-	response, err := GetSchools(ctx, client)
+func GetSchoolByName(jwtToken, schoolName string) (*model.School, error) {
+	resp, err := SearchSchools(jwtToken, schoolName, "", 1)
 	if err != nil {
 		return nil, err
 	}
-	query := response.Schools
-	for _, elem := range query.GetSchools() {
-		if schoolName == elem.Name {
-			return &elem, nil
+
+	for _, elem := range resp.Edges {
+		if schoolName == elem.Node.Name {
+			schoolID := strconv.Itoa(elem.Node.ID)
+			school := model.School{
+				ID:   &schoolID,
+				Name: elem.Node.Name,
+			}
+			return &school, nil
 		}
 	}
 	return nil, nil
